[package]
name = "vsock_grpc_echo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12.1"
prost = "0.13.1"
tokio-stream = "0.1"
tokio-vsock = { git = "https://github.com/rust-vsock/tokio-vsock", rev = "3a41323", features = ["tonic-conn"]}
#tokio-vsock = { version = "0.5.0", features =["tonic-conn"] }
#tokio-vsock = { path = "../tokio-vsock" }
tower = "0.4.13"
hyper = "1.4.1"
hyper-util = "0.1"

[build-dependencies]
tonic-build = "0.12.1"
